// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepoLink renders a fragment when "to" is null 1`] = `
<DocumentFragment>
  <span
    class=""
  >
     my/
    <span>
      repo
    </span>
  </span>
</DocumentFragment>
`;

exports[`RepoLink renders a link when "to" is set 1`] = `
<DocumentFragment>
  <a
    class=""
    href="http://example.com"
  >
    <span
      class=""
    >
       my/
      <span>
        repo
      </span>
    </span>
  </a>
</DocumentFragment>
`;
